# eridani

./: .gitignore  Cargo.toml  README.md  build.rs  test.eri
.github/workflows/: CI.yml
eri/: Cargo.toml
eri/src/: main.rs
src/: lib.rs
src/common/: conversions.rs  discriminant.rs  match_engine.rs  mod.rs  natives.rs  value.rs
src/common/bytecode/: disassembler.rs  mod.rs  serialise.rs
src/common/natives/: mod.rs
src/common/value/: conversions.rs  mod.rs
src/compiler/: analyser.rs  arena.rs  bytecode.rs  compiler.rs  mod.rs  parser.rs  scanner.rs
src/compiler/analyser/: match_engine.rs  mod.rs  pattern.rs
src/compiler/analyser/modules/: ffi.rs  mod.rs
src/compiler/eridani_std/: eridani_std_basic.eri  eridani_std_feature_std.eri  mod.rs
src/compiler/ir/: checker.rs  converter.rs  match_engine.rs  mod.rs  modules.rs  optimiser.rs  pattern.rs  tests.rs  treewalk.rs
src/compiler/ir/modules/: ffi.rs  mod.rs
src/runtime/: mod.rs  treewalk.rs  vm.rs
src/treewalk/: fib.eri  mod.rs  tests.rs
test_files/: mod.eri
