[package]
name = "eridani"
version = "0.1.0"
edition = "2021"
default-run = "eri"
rust-version = "1.64"

[dependencies]
bimap = { version = "0.6", default-features = false }
clap = { version = "4.1", features = ["derive"], optional = true }
libloading = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
strum = { version = "0.25", default-features = false, features = ["derive"] }

[build-dependencies]
rustc_version = "0.4"

[features]
default = ["compiler", "runtime", "std", "target_std"]
compiler = []
runtime = []
web = ["runtime"]
target_web = ["compiler"]
std = ["dep:libloading"]
target_std = ["compiler"]
ffi = []
error_trait = []
tree_walk = ["compiler", "std", "target_std"]
serialise = ["serde"]
bin = ["dep:clap", "ffi", "serialise"]

[lib]
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "eri"
required-features = ["bin"]

[profile.bin-release]
inherits = "release"
lto = true
codegen-units = 1
