[package]
name = "eridani"
version = "0.1.0"
edition = "2021"
default-run = "eri"
rust-version = "1.64"

[dependencies]
bimap = { version = "0.6", default-features = false }
clap = { version = "4.1", features = ["derive"], optional = true }
hashbrown = "0.14.3"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
strum = { version = "0.25", default-features = false, features = ["derive"] }

[build-dependencies]
rustc_version = "0.4"

[features]
default = ["compiler", "runtime", "std", "target_std"]
compiler = []
runtime = []
web = ["runtime"]
target_web = ["compiler"]
std = []
target_std = ["compiler"]
ffi = []
error_trait = []
serialise = ["serde"]
bin = ["dep:clap", "ffi", "serialise"]

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
multiple_unsafe_ops_per_block = "forbid"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
undocumented_unsafe_blocks = "forbid"
use_self = "allow"

[lib]
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "eri"
required-features = ["bin"]

[profile.bin-release]
inherits = "release"
lto = true
codegen-units = 1
